# polaris-observations-api

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile.tox  Makefile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  run_integration_tests.sh
dhos_observations_api/: __main__.py  app.py
dhos_observations_api/blueprint_api/: __init__.py  controller.py  message.py
dhos_observations_api/blueprint_development/: __init__.py  controller.py
dhos_observations_api/helpers/: cli.py
dhos_observations_api/models/: api_spec.py
dhos_observations_api/models/sql/: agg_observation_sets.py  observation.py  (+2 more)
dhos_observations_api/openapi/: openapi.yaml
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: Dockerfile  README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: messaging_client.py  observations_api_client.py
integration-tests/features/: aggregate_observations.feature  observation_create_update.feature  observation_search.feature
integration-tests/helpers/: jwt.py  observations_helper.py
integration-tests/steps/: common_steps.py  messaging_steps.py  request_steps.py  response_steps.py  storage_steps.py
migrations/: env.py
migrations/versions/: 683bdc6f91b7_miss_agg_obs.py  76c2df9f7829_zero_mins_late.py  7c044c108b2f_add_indexes.py  91e25778425d_initial_migration.py  99661944c32f_mins_late.py  9a4a12ce753b_modified_idx.py  d4de063df517_agg_obs.py  e6b64a79cd53_added_patient_id.py  ecac6f01a4fc_index_by_encounter_id_and_record_time.py
scripts/: docker-compose.yml  kill_neo.sh  setup_local.sh
tests/: conftest.py  test_api.py  test_controller.py  test_get_obs_set.py  test_observation.py  test_observation_metadata.py  test_observation_set.py  test_openapi.py  test_publish_obs_set.py  test_update_observation_set.py
